<resources>
    <string name="app_name">Expenses</string>
    <string name="welcome">Добро пожаловать</string>
    <string name="control_expenses">Учет расходов</string>
    <string name="expense_name">Название расхода</string>
    <string name="cost">Цена</string>
    <string name="add">Добавить</string>
    <string name="showInfo">Показать информацию</string>
    <string name="expenses_book">Учет расходов</string>
    <string name="cont">Продолжить</string>
    <string name="description">Описание</string>
    <string name="delete">Удалить</string>
    <string name="back">Назад</string>
</resources>