<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/red">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/control_expenses"
        android:textColor="@color/red_text"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.091" />

    <TextView
        android:textColor="@color/red_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expense_name"
        app:layout_constraintBottom_toTopOf="@+id/editText_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:textColor="@color/red_text"
        android:textColorHint="@color/red_text"
        android:backgroundTint="@color/red_text"
        android:id="@+id/editText_name"
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:layout_marginTop="80dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:textColor="@color/red_text"
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cost"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_name" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textColor="@color/red_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_cost" />

    <EditText
        android:inputType="number"
        android:textColor="@color/red_text"
        android:textColorHint="@color/red_text"
        android:backgroundTint="@color/red_text"
        android:id="@+id/editText_cost"
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editText_desc"
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/red_text"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:textColor="@color/red_text"
        android:textColorHint="@color/red_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add"
        android:textColor="@color/red_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_desc" />

    <Button
        android:id="@+id/show_button"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/showInfo"
        android:textColor="@color/red_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_button" />

    <Button
        android:visibility="invisible"
        android:id="@+id/delete"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/delete"
        android:textColor="@color/red_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/show_button" />


</androidx.constraintlayout.widget.ConstraintLayout>